syntax = "proto3";
package course;
option go_package = "github.com/Zhoangp/Course-Service/pb";



service CourseService {
  rpc GetCourses(GetCoursesRequest) returns (GetCoursesResponse);
  rpc GetCourse(GetCourseRequest) returns (GetCourseResponse);
}


message Image {
  string url = 1;
  string width = 2;
  string height = 3;
}
message Resource {
  string url = 1;
  string duration = 2;
}
message Lecture {
  string id = 1;
  string title = 2;
  string content = 3;
  string status = 4;
  Resource video = 5;
}
message Section {
  string id = 1;
  string title = 2;
  int32 numberOfLectures = 3;
  repeated Lecture lectures = 4;
}
message Course {
  string id = 1;
  string title = 2;
  string description = 3 ;
  string level = 4 ;
  string language = 5 ;
  string price = 6 ;
  float discount = 7 ;
  string currency = 8 ;
  string duration = 9 ;
  string status = 10 ;
  float rating = 11 ;
  Image thumbnail = 12;
  repeated Section sections = 13;

}

message ErrorResponse {
  int64 code = 1;
  string message = 2;
}
message GetCoursesRequest {
    int32 page = 1;
    int32 pageSize = 2;
}
message GetCoursesResponse {
  repeated Course courses = 1;
  ErrorResponse error = 2;
}

message GetCourseRequest {
  string id = 1;
}
message GetCourseResponse {
  Course course = 1;
  ErrorResponse error = 2;
}
